virtual-service2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
  namespace: test  
spec:
  hosts:
  - "httpbin.example.com"
  gateways:
  - httpbin-gateway # it can be <NAMSESPACE>/<GATEWAY NAME>
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8081
        host: deploy2
